--- a/src/app/pages/dashboard/new-mail/new-mail.component.html
+++ b/src/app/pages/dashboard/new-mail/new-mail.component.html
@@ -1,4 +1,4 @@
-<div class="new-mail">
+<!-- <div class="new-mail">
 
     <div class="editor">
         <span class="template-name">{{itemSelected?.title || "No Template Selected"}}</span>
@@ -8,12 +8,7 @@
         <div class="subject input">
             <input type="text"  placeholder="Subject" [(ngModel)]="subject" name="subject" id="">
         </div>
-        <!-- <div class="cc input">
-            <app-email-chips (toEmails)="getToCC($event)" placeholder="Cc"/>
-        </div>
-        <div class="bcc input">
-            <app-email-chips (toEmails)="getToBcc($event)" placeholder="Bcc"/>
-        </div> -->
+       
         <quill-editor width="1100px" classes="editor" [(ngModel)]="templateFields!.body"
         [modules]="quillConfig!.modules"
         [formats]="quillConfig!.formats"
@@ -66,7 +61,6 @@
            @if(itemSelected != null){
             <ng-container *ngFor="let item of getKeys(itemSelected.templateVariables)">
                @if(item == "body"){
-                <!-- <span>Please add your content in the editor!</span> -->
                } @else {
                 <div class="input-group">
                     <label>{{ item }}</label>
@@ -92,4 +86,4 @@
    </p-sidebar>
 
 
-</div>
+</div> -->
