--- a/src/app/shared/nav-bar/nav-bar.component.css
+++ b/src/app/shared/nav-bar/nav-bar.component.css
@@ -1,5 +1,5 @@
 .nav, .nav-small{
-    width: 33vh;
+    width: 38vh;
     height: 100%;
     border-right: 1px solid #ddd;
     display: flex;
@@ -56,7 +56,9 @@
 }
 
 
-
+.material-symbols-outlined{
+    font-variation-settings: 'FILL' 1;
+}
 
 .first, .last{
     width: 100%;
@@ -84,13 +86,9 @@ ul li {
 
 ul li a {
     width: 100%;
-    padding: 7px 10px;
+    padding: 7px 30px;
     border-radius: 8px;
     cursor: pointer;
-}
-
-ul li a:hover {
-    background-color: #ddd;
 }
 
 .last .menu ul li:last-child a{
@@ -127,6 +125,23 @@ ul li a:hover {
 
 }
 
+.navigate{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border: 2px solid #fff;
+    transition: 0.2s all ease-in-out;
+}
+
+.navigate .material-symbols-outlined{
+    color: #A9A9A9;
+    font-size: 20px;
+}
+
+.navigate:hover{
+    border: 2px solid #ddd;
+}
+
 .logout{
     display: flex;
     align-items: center;
@@ -143,11 +158,7 @@ ul li a:hover {
 }
 
 .new-email{
-    background-image: linear-gradient(
-        45deg,
-        #001D57,
-        #0057FF
-    );
+    background-color: #0057FF;
     color: #fff;
     display: flex;
     align-items: center;
@@ -173,6 +184,16 @@ ul li a:hover {
 .activeRoute{
     background-color: #000000;
     color: #fff;
+    transition: 0.2s all ease-in-out;
+}
+
+.activeRoute .material-symbols-outlined{
+    color: #0057FF;
+}
+
+.activeRoute:hover{
+    border-color: #fffff0;
+    /* background-image: linear-gradient(90deg, black , #0057ff); */
 }
 
 @media screen and (max-width: 768px) {
